[package]
name = "constimer"
version = "0.1.0"
authors = ["Daniel P. Teberian"]
description = "A simple timer."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
eventual = "0.1.7"
ncurses = "5.97.0"
regex = "1.2.1"
