[package]
name = "lncount"
version = "0.1.0"
edition = "2018"
authors = ["Daniel P. Teberian"]
description = "A utility to count lines of code in a specified file, along with basic information about the file type of said file."

[dependencies]
clap = "2.32.0"
deque = "0.3.2"
edit-distance = "2.0.1"
ignore = "0.4.2"
memchr = "2.0.1"
num_cpus = "1.8.0"
regex = "1.0.2"
smallvec = "0.6.6"
